--- a/winapi-lessons/dialogs/dialogs.vcxproj
+++ b/winapi-lessons/dialogs/dialogs.vcxproj
@@ -73,6 +73,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="controls.h" />
     <ClInclude Include="DlgOne.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
