--- a/Zhakhalov/WinApp/WinApp - копия/WinMessageCrackers/WinMessageCrackers.vcxproj
+++ b/Zhakhalov/WinApp/WinApp - копия/WinMessageCrackers/WinMessageCrackers.vcxproj
@@ -11,23 +11,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{17B5EFF3-A236-4B10-8A63-CE2C7715EAC2}</ProjectGuid>
+    <ProjectGuid>{F403D912-CEA1-46BF-9779-AB2840C687FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>WinATLControls</RootNamespace>
+    <RootNamespace>WinMessageCrackers</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -71,31 +69,31 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>gdiplus.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
     <None Include="small.ico" />
-    <None Include="WinATLControls.ico" />
+    <None Include="WinMessageCrackers.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AtlControls.h" />
-    <ClInclude Include="DlgOne.h" />
+    <ClInclude Include="MessageCrackers.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="WinATLControls.h" />
+    <ClInclude Include="WinMessageCrackers.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DlgOne.cpp" />
+    <ClCompile Include="MessageCrackers.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="WinATLControls.cpp" />
+    <ClCompile Include="WinMessageCrackers.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="WinATLControls.rc" />
+    <ResourceCompile Include="WinMessageCrackers.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
