--- a/MaxZuber/problem/dialogs/dialogs.vcxproj
+++ b/MaxZuber/problem/dialogs/dialogs.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="DlgTwo.h" />
     <ClInclude Include="HIMLAPI.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +89,7 @@
     <ClCompile Include="DlgTwo.cpp" />
     <ClCompile Include="HIMLAPI.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
