Output to the file of ukrainian text tested.

--- a/winapi-lessons/dialogs/dialogs.vcxproj
+++ b/winapi-lessons/dialogs/dialogs.vcxproj
@@ -98,6 +98,9 @@
   <ItemGroup>
     <ResourceCompile Include="dialogs.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="file.dat" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
